# EShop

./: Main.py  items.csv  main.py  pyproject.toml
tests/: test_main.py
