[tool.poetry]
name = "eshop"
version = "0.1.0"
description = ""
authors = ["pushk <pushkarev.alexey.a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
coverage = "^7.1.0"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
